fix mobile layout issue.

--- a/src/client/css/custom/trading-view.scss
+++ b/src/client/css/custom/trading-view.scss
@@ -33,6 +33,22 @@
           font-size: 16px;
         }
       }
+
+      @media screen and (max-width: 768px) {
+        .price {
+          font-size: 18px;
+        }
+
+        .wrapper {
+          .percent {
+            font-size: 14px;
+          }
+
+          .period {
+            font-size: 14px;
+          }
+        }
+      }
     }
   }
 
@@ -90,3 +106,4 @@
     }
   }
 }
+
